Added a env file

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,9 @@ target 'ThroneAdvisor' do
   target 'ThroneAdvisor-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
+
+    pod 'react-native-config', :path => '../node_modules/react-native-config'
+
   end
 
   target 'ThroneAdvisorTests' do
