--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "jest": "22.4.4",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
